--- a/src/components/EventCard/EventCard.sass
+++ b/src/components/EventCard/EventCard.sass
@@ -4,7 +4,7 @@
     
 .event-card
 
-    width: 400px
+    width: min(85vw, 400px)
     border: 6px solid white
 
     height: 300px
